@@ -300,6 +300,13 @@
       <icon-name>gnome-mime-application-x-executable</icon-name>
       <exec-flag>-e</exec-flag>
     </terminal>
+    <terminal>
+       <_name>Konsole</_name>
+       <executable>konsole</executable>
+       <command>konsole</command>
+       <icon-name>konsole</icon-name>
+       <exec-flag>-e</exec-flag>
+     </terminal>
   </terminals>
 
   <media-players>
