@@ -1,5 +1,10 @@
 2008-02-09  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-default-applications.xml.in: add support for Konsole, too
+	(bug #515386)
+
+2008-02-09  Jens Granseuer  <jensgr@gmx.net>
+
 	Patch by: Nicolas Valcárcel
 
 	* gnome-default-applications.xml.in: add support for Terminator
